# rho

./: .gitignore  Advanced Quantum Narrative Density Matrix.md  CLAUDE.md  CONFIGURATION_MIGRATION.md  Narrative Attribute Algebra System.md  QUANTUM_CHANNELS_INTEGRATION.md  Quantum_Output_Pipeline_DESCRIPTION.md  README.md  cron_env.sh  docker-compose.yml  four transformation buttons.md  pyproject.toml  quantum_batch_worker.py  rho_small_embedding_demo_humanizer_node.md  setup_cron.sh  start_api_secure.sh
GPT-5/: narrative_original-Discourse.txt  narrative_original.txt  narrative_prime-Discourse-2.txt  narrative_prime-Discourse.txt  narrative_prime.txt  report-Discourse-2.json  report-Discourse.json  report.json
analytic-lexicology-interface/: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
analytic-lexicology-interface/src/: App.jsx  index.css
api/: Dockerfile  archive_main_original.py  attribute_library.py  config.py  demo_rho_voices.py  main.py  quantum_validation_results.json  requirements.txt  rho_language_generator.py  rho_space_designer.py  rho_text_generator.py  rho_transformations.py  test_quantum_validation.py
api/core/: __init__.py  batch_worker.py  channel_composition.py  dynamic_povm.py  embedding.py  groq_hierarchical_transformer.py.deprecated  gutenberg_integration.py  (+13 more)
config/: centralized_config.py
deploy/: Caddyfile
simple-quantum/: index.html  package-lock.json  package.json  vite.config.js
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+103 files in other folders)
