[tool.poetry]
name = "rho-matrix-demo"
version = "0.1.0"
description = "Rho density matrix narrative consciousness system"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"  # Use Python 3.11 instead of 3.13
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
numpy = "^2.0.0"
pydantic = "^2.10.0"  # Modern Pydantic v2
requests = "^2.32.0"
typing-extensions = "^4.12.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.7.0"
groq = "^0.31.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true